examples/errors/invalid-tab-indents.tw
# Indentation requires to use same number of spaces
# indent 1
	# indent 2
			# indent 3
